app/assets/stylesheets/style.css
.full-body,
html,
body {
    height: 100%;
    /* The html and body elements cannot have any padding or margin. */
}
.navbar-default .navbar-brand {
    font-family: 'Dancing Script', cursive;
    font-size: 38px;
}
.navbar-default:hover .navbar-brand:hover {
    color: #ccc;
}

#content {
    min-height: 100%;
    height: auto;
    /* Negative indent footer by its height */
    margin: 0 auto -200px;
    /* Pad bottom by footer height */
    padding: 0 0 200px;
}

/* The Modal (background) */
#modal-window {
    position: fixed; /* Stay in place */
    z-index: 1; /* Sit on top */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    background-color: rgb(0,0,0); /* Fallback color */
    background-color: rgba(0,0,0,.85);
}
#modal-window .modal-content {
    transform: translate(-50%, -50%);
    position: relative;
    left: 50%;
    top: 50%;
    width: 75%;
    max-height: 90%;
    background-color: #fefefe;
    border: 1px solid #888;
}
/* Modal Content/Box */
#modal-window .modal-content .modal-body {
    max-height: calc(100vh - 210px);
    overflow-y: auto;
}

#modal-window .modal-content .modal-header {

}

.modal-content .modal-header .close {
    width: 36px;
    height: 36px;
    background-repeat: no-repeat;
    background-size: contain;
    background-image: url(modal-close.png);
}

@media screen and (max-width: 668px) {
    #modal-window .modal-content {
        padding: 10px;
        width: 90%;
        margin-top: 20px;
    }

}

#footer {
    margin-top: 10px;
    height: 200px;
}
.panel-footer {
    height:100%;
}

.panel-footer .container p {
    text-align: right;
}

